# Vector-QRcode

./: README.md  __init__.py  pyproject.toml  qrcodegen.py  requirements.txt  setup.py
